{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 141,
  "lineage": "966998bd-af23-d358-f8df-798c3fa5edae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:security-group/sg-092e42e8e02089a26",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-092e42e8e02089a26",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "263443418578",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "simple-test-default"
            },
            "tags_all": {
              "Name": "simple-test-default"
            },
            "vpc_id": "vpc-0c6dedd5990b96a18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee593f4610f2b3ff",
            "domain": "vpc",
            "id": "eipalloc-0ee593f4610f2b3ff",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-171-220.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.171.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "simple-test-natgw"
            },
            "tags_all": {
              "Name": "simple-test-natgw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:internet-gateway/igw-01018ff3871f11a99",
            "id": "igw-01018ff3871f11a99",
            "owner_id": "263443418578",
            "tags": {
              "Name": "simple-test-igw"
            },
            "tags_all": {
              "Name": "simple-test-igw"
            },
            "vpc_id": "vpc-0c6dedd5990b96a18"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee593f4610f2b3ff",
            "connectivity_type": "public",
            "id": "nat-013a4507d49fb8caf",
            "network_interface_id": "eni-0a5408aab3173ab0a",
            "private_ip": "10.194.0.179",
            "public_ip": "3.39.171.220",
            "subnet_id": "subnet-0c242ac9cbd653bf2",
            "tags": {
              "Name": "simple-test-natgw"
            },
            "tags_all": {
              "Name": "simple-test-natgw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_worldwide",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a17c0267c687094a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-013a4507d49fb8caf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a17c0267c687094a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_worldwide",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01018ff3871f11a99",
            "id": "r-rtb-02bf0d876c10022381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02bf0d876c1002238",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:route-table/rtb-0a17c0267c687094a",
            "id": "rtb-0a17c0267c687094a",
            "owner_id": "263443418578",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "simple-test-private"
            },
            "tags_all": {
              "Name": "simple-test-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6dedd5990b96a18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:route-table/rtb-02bf0d876c1002238",
            "id": "rtb-02bf0d876c1002238",
            "owner_id": "263443418578",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "simple-test-public"
            },
            "tags_all": {
              "Name": "simple-test-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6dedd5990b96a18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf24c896f2dd61d1",
            "route_table_id": "rtb-0a17c0267c687094a",
            "subnet_id": "subnet-0dc306c663c171650"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de81131f1b9a227a",
            "route_table_id": "rtb-0a17c0267c687094a",
            "subnet_id": "subnet-0000522961e6a29a1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fe4c984ce4a3300",
            "route_table_id": "rtb-02bf0d876c1002238",
            "subnet_id": "subnet-0c242ac9cbd653bf2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c309b3ca3cdc7ea9",
            "route_table_id": "rtb-02bf0d876c1002238",
            "subnet_id": "subnet-08f76558061fea7a9"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-0dc306c663c171650",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.194.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc306c663c171650",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "simple-test-private-1",
              "kubernetes.io/cluster/simple-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "simple-test-private-1",
              "kubernetes.io/cluster/simple-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c6dedd5990b96a18"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-0000522961e6a29a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.194.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0000522961e6a29a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "simple-test-private-2",
              "kubernetes.io/cluster/simple-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "simple-test-private-2",
              "kubernetes.io/cluster/simple-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c6dedd5990b96a18"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-0c242ac9cbd653bf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.194.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c242ac9cbd653bf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "simple-test-public-1",
              "kubernetes.io/cluster/simple-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "simple-test-public-1",
              "kubernetes.io/cluster/simple-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c6dedd5990b96a18"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-08f76558061fea7a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.194.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f76558061fea7a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "simple-test-public-2",
              "kubernetes.io/cluster/simple-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "simple-test-public-2",
              "kubernetes.io/cluster/simple-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c6dedd5990b96a18"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:vpc/vpc-0c6dedd5990b96a18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.194.0.0/16",
            "default_network_acl_id": "acl-039cb0a63157fa7a7",
            "default_route_table_id": "rtb-0e64b65abaa35f81f",
            "default_security_group_id": "sg-092e42e8e02089a26",
            "dhcp_options_id": "dopt-ff12dc94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c6dedd5990b96a18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e64b65abaa35f81f",
            "owner_id": "263443418578",
            "tags": {
              "Name": "simple-test"
            },
            "tags_all": {
              "Name": "simple-test"
            }
          }
        }
      ]
    }
  ]
}